[gd_scene load_steps=8 format=3 uid="uid://bb2vqgattmg2o"]

[ext_resource type="Script" path="res://scripts/lives_manager.gd" id="1_fem7l"]
[ext_resource type="AudioStream" uid="uid://0s5v80odhoxp" path="res://assets/sounds/sad-piano.wav" id="4_0i3yk"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="4_lr1fb"]
[ext_resource type="AudioStream" uid="uid://c346iro815k3m" path="res://assets/music/time_for_adventure.mp3" id="6_2korr"]
[ext_resource type="PackedScene" uid="uid://3ipuw0ar2ig4" path="res://scenes/mobile_controls.tscn" id="9_lc50s"]
[ext_resource type="Texture2D" uid="uid://d25cgfd0y5d02" path="res://assets/sprites/UI/gear.png" id="10_7j754"]
[ext_resource type="AudioStream" uid="uid://poyotn47lf6j" path="res://assets/sounds/game_win.mp3" id="11_hv1vy"]

[node name="LivesUI" type="CanvasLayer"]
script = ExtResource("1_fem7l")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_lr1fb")

[node name="SadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_0i3yk")
volume_db = -5.0

[node name="MainMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2korr")
autoplay = true

[node name="MobileControls" parent="." instance=ExtResource("9_lc50s")]
visible = false

[node name="SettingsButton" type="Button" parent="."]
offset_left = 1843.0
offset_top = 20.0
offset_right = 2429.0
offset_bottom = 540.0
scale = Vector2(0.1, 0.1)
text = "Settings"
icon = ExtResource("10_7j754")
flat = true

[node name="GameWin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_hv1vy")

[connection signal="finished" from="SadSound" to="." method="_on_sad_sound_finished"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
